# gameplay

./: .appveyor.yml  .clang-format  .editorconfig  .flake8  .gitattributes  .gitignore  .kateconfig  .travis.yml  BUILDING.md  CHANGES.md  CMakeLists.txt  CODING.docx  CODING.md  LinuxAndRPICompile.txt  README.md  build.bat  build.py  build.sh  build.xml  build_framework.sh  codestyle.xml  gameplay-all.pro  gameplay-api.doxyfile  gameplay-newproject.bat  gameplay-newproject.sh  gameplay.doxyfile  gameplay.sln  gameplay.workspace  generate-projects-VS2017.bat  generate-projects.bat  generate-projects.sh  install.bat  install.sh  newproject.bat  newproject.sh  prebuild.bat  prebuild.sh  premake5.lua  say_hello.txt  setup.bat  (+2 more)
gameplay/: .cproject  .project  CMakeLists.txt  PlatformMacOSX.h  framework_build.sh  gameplay.cbp  gameplay.pro  gameplay.rc  gameplay.vcxproj  gameplay.vcxproj.filters  gameplay_build.sh
gameplay-app/: CMakeLists.txt  Info.plist  game.config  gameplay-app.plist  gameplay-app.pro  gameplay-app.rc  gameplay-app.vcxproj  gameplay-app.vcxproj.filters
gameplay-app/gameplay-app.xcodeproj/: project.pbxproj
gameplay-app/src/: App.cpp  App.h  AppDelegate.h  AppDelegate.mm  ViewController.h  ViewController.mm  main-linux.cpp  main-macos.mm  main-windows.cpp  main.cpp  main.mm
gameplay-luagen/: CMakeLists.txt  README.md  TODO.txt  gameplay-luagen.doxyfile  gameplay-luagen.pro  gameplay-luagen.sln  gameplay-luagen.vcxproj  gameplay-luagen.vcxproj.filters  generate-doxygen-xml.bat  generate-doxygen-xml.sh  generate-doxygen.bat  genxml.bat
gameplay-luagen/gameplay-luagen.xcodeproj/: project.pbxproj
gameplay-luagen/src/: Base.h  ClassBinding.cpp  ClassBinding.h  DebugNew.cpp  DebugNew.h  EnumBinding.h  FunctionBinding.cpp  FunctionBinding.h  Generator.cpp  Generator.h  TypedefBinding.h  main.cpp
gameplay-samples/: BuildHelpers.CMakeLists.txt  CMakeLists.txt
gameplay-samples/sample00-mesh/: .cproject  .project  CMakeLists.txt  bar-descriptor.xml  game.config  sample00-mesh-ios.plist  sample00-mesh-macosx.plist  sample00-mesh.cbp  sample00-mesh.vcxproj  sample00-mesh.vcxproj.filters
gameplay-samples/sample01-longboard/: .cproject  .project  CMakeLists.txt  bar-descriptor.xml  game.config  sample01-longboard-ios.plist  sample01-longboard-macos.plist  sample01-longboard-macosx.plist  sample01-longboard.cbp  sample01-longboard.vcxproj  sample01-longboard.vcxproj.filters
gameplay-samples/sample02-spaceship/: .cproject  .project  CMakeLists.txt  bar-descriptor.xml  game.config  sample02-spaceship-ios.plist  sample02-spaceship.cbp  sample02-spaceship.vcxproj  sample02-spaceship.vcxproj.filters
gameplay-samples/sample03-character/: .cproject  .project  CMakeLists.txt  bar-descriptor.xml  game.atc.config  game.config  game.dxt.config  game.png.config  game.pvrtc.config  game.win32.config  sample03-character-ios.plist  sample03-character.cbp  sample03-character.vcxproj  sample03-character.vcxproj.filters
gameplay-samples/sample04-catapult/: .cproject  .project  bar-descriptor.xml  sample04-catapult.vcxproj  sample04-catapult.vcxproj.filters
gameplay-samples/sample04-particles/: .cproject  .project  CMakeLists.txt  bar-descriptor.xml  game.config  sample04-particles-ios.plist  sample04-particles-macosx.plist  sample04-particles.cbp  sample04-particles.vcxproj  sample04-particles.vcxproj.filters
gameplay-samples/sample04-sandbox/: .cproject  .project  bar-descriptor.xml  sample04-sandbox.vcxproj  sample04-sandbox.vcxproj.filters
gameplay-samples/sample05-lua/: .cproject  .project  CMakeLists.txt  bar-descriptor.xml  game.config  sample05-lua-ios.plist  sample05-lua-macosx.plist  sample05-lua.cbp  sample05-lua.vcxproj  sample05-lua.vcxproj.filters
gameplay-samples/sample06-cubes/: .cproject  .project  CMakeLists.txt  bar-descriptor.xml  game.config  sample06-cubes-ios.plist  sample06-cubes-macosx.plist  sample06-cubes.vcxproj  sample06-cubes.vcxproj.filters
gameplay-samples/sample06-racer/: .cproject  .project  CMakeLists.txt  bar-descriptor.xml  game.atc.config  game.dxt.config  game.png.config  game.pvr.config  sample06-racer-ios.plist  sample06-racer-macosx.plist  sample06-racer.cbp  sample06-racer.vcxproj  sample06-racer.vcxproj.filters
gameplay-tests/: .cproject  .project  CMakeLists.txt  bar-descriptor.xml  game.config  gameplay-tests-ios.plist  gameplay-tests-macosx.plist  gameplay-tests.cbp  gameplay-tests.vcxproj  gameplay-tests.vcxproj.filters
gameplay-tests/android/: AndroidManifest.xml  build.xml
gameplay-tests/gameplay-tests.xcodeproj/: project.pbxproj
gameplay-tests/src/: Audio3DTest.cpp  Audio3DTest.h  BillboardTest.cpp  BillboardTest.h  CreateSceneTest.cpp  CreateSceneTest.h  DrawTriangleTest.cpp  DrawTriangleTest.h  FirstPersonCamera.cpp  FirstPersonCamera.h  FormsTest.cpp  FormsTest.h  GamepadTest.cpp  GamepadTest.h  GestureTest.cpp  GestureTest.h  InputTest.cpp  InputTest.h  LightTest.cpp  LightTest.h  LoadSceneTest.cpp  LoadSceneTest.h  MeshBatchTest.cpp  MeshBatchTest.h  MeshPrimitiveTest.cpp  MeshPrimitiveTest.h  PhysicsCollisionObjectTest.cpp  PhysicsCollisionObjectTest.h  PhysicsConstraintTest.cpp  PhysicsConstraintTest.h  PhysicsSceneTest.cpp  PhysicsSceneTest.h  PhysicsTest.cpp  PhysicsTest.h  PostProcessTest.cpp  PostProcessTest.h  SpriteBatchTest.cpp  SpriteBatchTest.h  TerrainTest.cpp  TerrainTest.h  (+12 more)
gameplay/android/: .classpath  .cproject  .project  AndroidManifest.xml  build.xml  project.properties
gameplay/gameplay.xcodeproj/: project.pbxproj
gameplay/res/: icon_black.psd  icon_black_transparent.psd  icon_white_transparent.psd  logo.ai
gameplay/src/: AIAgent.cpp  AIAgent.h  AIController.cpp  AIController.h  AIMessage.cpp  AIMessage.h  AIState.cpp  AIState.h  AIStateMachine.cpp  AIStateMachine.h  AbsoluteLayout.cpp  AbsoluteLayout.h  Activator.cpp  Activator.h  Animation.cpp  Animation.h  AnimationClip.cpp  AnimationClip.h  AnimationController.cpp  AnimationController.h  AnimationTarget.cpp  (+409 more)
samples/: BuildHelpers.CMakeLists.txt  CMakeLists.txt
usage_example/: Behaviour.hpp  CMakeLists.txt  Exporter.cpp
(+4423 files in other folders)
